# libQD3

./: CHANGES.1.0.0.md  README.md  configure.ac
examples/: README  edd_agm.cpp
include/: Makefile.am
include/qd/: c_edd.h  dd_inline.h  edd_inline.h  edd_real.h  qd_inline.h  td_inline.h
src/: Makefile.am  c_edd.cpp  edd_const.cpp  edd_real.cpp  edd_trans.cpp
tests/: c_test.c  qd_test.cpp
