#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.
define([QD_PATCH_VERSION], 0)
AC_PREREQ([2.69])
AC_INIT([qd3],[1.1.QD_PATCH_VERSION],[maho.nakata@gmail.com])
AC_CONFIG_SRCDIR([src/qd_real.cpp])
AC_CONFIG_MACRO_DIR([m4])

PACKAGE="qd3"
MAJOR_VERSION="1"
MINOR_VERSION="1"
PATCH_VERSION="QD_PATCH_VERSION"
VERSION=$MAJOR_VERSION.$MINOR_VERSION.$PATCH_VERSION
AC_DEFINE_UNQUOTED([MAJOR_VERSION],$MAJOR_VERSION,[qd major version number])
AC_DEFINE_UNQUOTED([MINOR_VERSION],$MINOR_VERSION,[qd minor version number])
AC_DEFINE_UNQUOTED([PATCH_VERSION],$PATCH_VERSION,[qd patch number (sub minor version)])
echo "configuring $PACKAGE $VERSION..."

AC_CONFIG_AUX_DIR([config])
AM_INIT_AUTOMAKE([foreign tar-ustar dist-xz no-dist-gzip])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_HEADERS([include/qd/qd_config.h])

AC_CANONICAL_HOST

# Checks for arguments
# --enable-inline
AC_ARG_ENABLE([inline], AS_HELP_STRING(--enable-inline, [inline commonly used functions.  [[default=yes]]]))
AC_MSG_CHECKING([if commonly used function is to be inlined])
if test "$enable_inline" != "no"; then
  enable_inline="yes"
  AC_DEFINE([QD_INLINE], [1], [Define to 1 to inline commonly used functions.])
fi
AC_MSG_RESULT($enable_inline)

# --enable-ieee-add
AC_ARG_ENABLE([ieee-add], AS_HELP_STRING(--enable-ieee-add, [use addition that satisfies IEEE-style error bound instead of Cray-style error bound.  [[default=no]]]))
AC_MSG_CHECKING([if addition with IEEE-style error bound is to be used])
if test "$enable_ieee_add" = "yes"; then
  AC_DEFINE([QD_IEEE_ADD], [1], [Define to 1 to use additions with IEEE-style error bounds.])
else
  enable_ieee_add="no"
fi
AC_MSG_RESULT($enable_ieee_add)

# --enable-sloppy-mul
AC_ARG_ENABLE([sloppy-mul], AS_HELP_STRING(--enable-sloppy-mul, [use fast but slightly inaccurate multiplication.  [[default=yes]]]))
AC_MSG_CHECKING([if sloppy multiplication is to be used])
if test "$enable_sloppy_mul" != "no"; then
  enable_sloppy_mul="yes"
  AC_DEFINE([QD_SLOPPY_MUL], [1], [Define to 1 to use sloppy multiplication (which is faster by slightly inaccurate).])
fi
AC_MSG_RESULT($enable_sloppy_mul)

# --enable-sloppy-div
AC_ARG_ENABLE([sloppy-div], AS_HELP_STRING(--enable-sloppy-div, [use fast but slightly inaccurate division.  [[default=yes]]]))
AC_MSG_CHECKING([if sloppy division is to be used])
if test "$enable_sloppy_div" != "no"; then
  enable_sloppy_div="yes"
  AC_DEFINE([QD_SLOPPY_DIV], [1], [Define to 1 to use sloppy division (which is faster by slightly inaccurate).])
fi
AC_MSG_RESULT($enable_sloppy_div)


# Checks for programs.
AC_LANG(C++)
AC_PROG_CXX
AC_PROG_CC


# --enable-fma
# Selects the FMA API (gnu/c99/ibm/ia64/compiler).  Does NOT touch -march
# or -mfma; ISA-specific codegen flags are the user's responsibility.
AC_ARG_ENABLE([fma], AS_HELP_STRING(--enable-fma, [use fused multiply-add/subtract (auto,gnu,ia64,c99,ibm,compiler).  Use this option with care.  [[default=auto]]]))
if test "x$enable_fma" = "x"; then
  enable_fma="auto"
fi
case "$enable_fma" in
  yes)
    AX_CXX_FMA
    if test "x$ax_cxx_fma" = "x"; then
      AC_MSG_ERROR([Cannot find working fused multiply add.])
    fi
  ;;
  auto)
    dnl Probe compiler/libm capability only; no configure-time CPU detection.
    dnl Keeping host-specific API preference order for powerpc and ia64, but
    dnl falling back to gnu/c99 on all other targets so that aarch64, riscv64,
    dnl and similar architectures are not silently left with FMA disabled.
    case $host in
      powerpc*-*-*)
        AX_CXX_FMA(["ibm gnu c99"])
      ;;
      ia64-*)
        AX_CXX_FMA(["ia64 gnu c99"])
      ;;
      *)
        AX_CXX_FMA(["gnu c99"])
      ;;
    esac
  ;;
  no) 
    ax_cxx_fma=
  ;;
  *) 
    AX_CXX_FMA([$enable_fma])
    if test "x$ax_cxx_fma" = "x"; then
      AC_MSG_ERROR([Cannot find working fused multiply add.])
    fi
  ;;
esac
if test "x$ax_cxx_fma" = "x"; then
  ax_cxx_fma="none"
  ax_cxx_fms="none"
else
  AC_DEFINE_UNQUOTED([QD_FMA(x,y,z)], [$ax_cxx_fma], 
    [If fused multiply-add is available, define correct macro for using it.])
  AC_DEFINE_UNQUOTED([QD_FMS(x,y,z)], [$ax_cxx_fms], 
    [If fused multiply-subtract is available, define correct macro for using it.])
fi

# Add floating-point contraction policy flags.
#
# Implicit FP contraction can silently break the error-free transforms that
# dd/qd arithmetic depends on, regardless of whether the FMA API is active.
# Therefore one of the following compiler options is required everywhere:
# -fp-model strict or -ffp-contract=off.
#
# Probe unconditionally for such a flag, append the first supported one to
# CXXFLAGS, and fail configure if neither is accepted.
#
# The probe tries -fp-model strict first so Intel oneAPI compilers (icx/icpx)
# pick the strict FP mode they require.  GCC and Clang reject -fp-model strict
# and fall through to -ffp-contract=off, which suppresses implicit contraction
# without forcing full strict semantics.  No compiler banner parsing is needed;
# the probe order does the right thing automatically.
#
# Deliberately do NOT add -mfma here: that would raise the x86-64 ISA
# baseline based on the build host, which is wrong for cross builds,
# packaging, and generic binary distribution.  Users who want hardware
# FMA instructions should pass -mfma or an appropriate -march/-mcpu flag
# explicitly in CXXFLAGS, or use --with-arch below.
AC_MSG_CHECKING([for flag to suppress implicit FP contraction])
fma_added_cxxflags=""
saved_CXXFLAGS="$CXXFLAGS"
found_contract_flag="no"
for flag in "-fp-model strict" "-ffp-contract=off"; do
  CXXFLAGS="$saved_CXXFLAGS $flag"
  AC_COMPILE_IFELSE([AC_LANG_PROGRAM([], [])],
    [fma_added_cxxflags="$flag"
     found_contract_flag="yes"
     break],
    [])
done
CXXFLAGS="$saved_CXXFLAGS"
if test "$found_contract_flag" = "yes"; then
  CXXFLAGS="$CXXFLAGS $fma_added_cxxflags"
  AC_MSG_RESULT([$fma_added_cxxflags])
else
  AC_MSG_RESULT([none found])
  AC_MSG_ERROR([cannot find a compiler flag to suppress implicit FP contraction; need either -fp-model strict or -ffp-contract=off])
fi

# --with-arch
# Controls ISA-specific code generation.  This is the explicit opt-in for
# -march flags that --enable-fma deliberately avoids.  Using native or
# x86-64-v3 may produce binaries that require FMA3 instructions; combine
# with --enable-fma if you want QD_FMA/QD_FMS to map to hardware FMA.
#
# Each non-generic value is probed with AC_COMPILE_IFELSE to verify that
# the compiler actually accepts the flag before it is appended to CXXFLAGS.
# native is additionally rejected outright under cross compilation because
# -march=native inspects the build host CPU and produces binaries that may
# not run on the intended target.
AC_ARG_WITH([arch],
  [AS_HELP_STRING([--with-arch=@<:@generic|x86-64-v3|native@:>@],
    [select code generation target @<:@default=generic@:>@])],
  [with_arch="$withval"],
  [with_arch="generic"])
arch_cxxflags=""
case "$with_arch" in
  generic)
    ;;
  x86-64-v3)
    case "$host_cpu" in
      x86_64|amd64)
        AC_MSG_CHECKING([whether $CXX accepts -march=x86-64-v3])
        saved_CXXFLAGS="$CXXFLAGS"
        CXXFLAGS="$saved_CXXFLAGS -march=x86-64-v3"
        AC_COMPILE_IFELSE([AC_LANG_PROGRAM([], [])],
          [arch_cxxflags="-march=x86-64-v3"
           AC_MSG_RESULT([yes])],
          [AC_MSG_RESULT([no])
           AC_MSG_ERROR([$CXX does not accept -march=x86-64-v3])])
        CXXFLAGS="$saved_CXXFLAGS"
        ;;
      *)
        AC_MSG_ERROR([--with-arch=x86-64-v3 is only valid on x86_64 hosts])
        ;;
    esac
    ;;
  native)
    if test "$cross_compiling" = yes; then
      AC_MSG_ERROR([--with-arch=native is not allowed when cross-compiling])
    fi
    AC_MSG_CHECKING([whether $CXX accepts -march=native])
    saved_CXXFLAGS="$CXXFLAGS"
    CXXFLAGS="$saved_CXXFLAGS -march=native"
    AC_COMPILE_IFELSE([AC_LANG_PROGRAM([], [])],
      [arch_cxxflags="-march=native"
       AC_MSG_RESULT([yes])],
      [AC_MSG_RESULT([no])
       AC_MSG_ERROR([$CXX does not accept -march=native])])
    CXXFLAGS="$saved_CXXFLAGS"
    ;;
  *)
    AC_MSG_ERROR([invalid value for --with-arch: $with_arch])
    ;;
esac
if test "x$arch_cxxflags" != "x"; then
  CXXFLAGS="$CXXFLAGS $arch_cxxflags"
fi
AC_SUBST([ARCH_CXXFLAGS], [$arch_cxxflags])

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([ieeefp.h])

# Probe GNU C++ _Float64x binary80 support for edd_real.
AC_MSG_CHECKING([for GNU C++ _Float64x binary80 support for edd_real])
enable_edd_real="no"
edd_real_status="disabled"
edd_float64x_mant_dig="n/a"
edd_float64x_max_exp="n/a"
edd_splitter="n/a"
AC_COMPILE_IFELSE(
  [AC_LANG_PROGRAM([[
     #ifndef __GNUC__
     #error edd_real requires GNU C++
     #endif
     #if !defined(__x86_64__) && !defined(__i386__)
     #error edd_real Phase 1 only supports x86 GNU _Float64x binary80 targets
     #endif
     #ifndef __FLT64X_MANT_DIG__
     #error missing __FLT64X_MANT_DIG__
     #endif
     #ifndef __FLT64X_MAX_EXP__
     #error missing __FLT64X_MAX_EXP__
     #endif
     #if __FLT64X_MANT_DIG__ != 64
     #error edd_real Phase 1 requires binary80 _Float64x with 64-bit mantissa
     #endif
     static_assert(__FLT64X_MANT_DIG__ == 64, "binary80 _Float64x required");
   ]], [[
     _Float64x x = (_Float64x) 1.0;
     _Float64x y = __builtin_sqrtf64x(x);
     _Float64x z = __builtin_ldexpf64x(y, 32);
     int cls = __builtin_isfinite(z);
     return cls ? 0 : 1;
   ]])],
  [enable_edd_real="yes"
   edd_real_status="enabled"
   edd_float64x_mant_dig="64"
   edd_float64x_max_exp="16384"
   edd_splitter="2^32 + 1"
   AC_DEFINE([QD_HAVE_EDD_REAL], [1],
     [Define to 1 if edd_real is enabled for GNU C++ _Float64x binary80 targets.])
   AC_DEFINE([QD_EDD_FLT64X_MANT_DIG], [64],
     [Mantissa precision in bits for the _Float64x edd_real limb type.])
   AC_DEFINE([QD_EDD_FLT64X_MAX_EXP], [16384],
     [Maximum exponent macro value for the supported binary80 _Float64x target.])
   AC_DEFINE([QD_EDD_SPLIT_BITS], [32],
     [Splitter exponent ceil(p/2) used by edd_real for binary80 _Float64x limbs.])
   AC_DEFINE([QD_EDD_SPLIT_SCALE_BITS], [33],
     [Scaling exponent used to avoid overflow in edd_real limb splitting.])],
  [AC_MSG_WARN([edd_real disabled: GNU C++ _Float64x binary80 support was not detected.])])
AC_MSG_RESULT([$edd_real_status])
AM_CONDITIONAL(HAVE_EDD_REAL, [test "$enable_edd_real" = "yes"])

CONFIGURE_ARGS=$ac_configure_args
AC_SUBST(CONFIGURE_ARGS)

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_STRUCT_TM

# Check for x86 FPU fix
AC_MSG_CHECKING([whether x86 FPU control code is needed])
x86_fix="no"
case "$host" in
  i?86-*-* | k?*-*-* | athlon-*-* | x86_64-*-*)
    AC_DEFINE([X86], [1], [Whether to use x86 fpu fix.])
    x86_fix="yes"
  ;;
esac
AC_MSG_RESULT($x86_fix)
if test "$x86_fix" = "yes"; then
  AC_CHECK_HEADERS([fpu_control.h])
fi

# Checks for library functions.
AC_CHECK_FUNCS([gettimeofday])
AX_CXX_CLOCK_GETTIME
if test "$ax_cxx_clock_gettime" = "yes"; then
  AC_SEARCH_LIBS([clock_gettime], [rt], 
    [AC_DEFINE([HAVE_CLOCK_GETTIME], [1], 
      [Define to 1 if your system has the clock_gettime function.])])
fi
AX_CXX_ISNAN
AC_DEFINE_UNQUOTED([QD_ISNAN(x)], [$ax_cxx_isnan], [Define this macro to be the isnan(x) function.])
AX_CXX_ISINF
AC_DEFINE_UNQUOTED([QD_ISINF(x)], [$ax_cxx_isinf], [Define this macro to be the isinf(x) function.])
AX_CXX_ISFINITE
AC_DEFINE_UNQUOTED([QD_ISFINITE(x)], [$ax_cxx_isfinite], [Define this macro to be the isfinite(x) function.])
AX_CXX_COPYSIGN
AC_DEFINE_UNQUOTED([QD_COPYSIGN(x, y)], [$ax_cxx_copysign], [Define this macro to be the copysign(x, y) function.])

AC_DEFINE([QD_API], [], [Any special symbols needed for exporting APIs.])

# check for C++ std includes
AC_DEFINE([QD_HAVE_STD], [1], [Define to 1 if your compiler have the C++ standard include files.])

# Check for fortran-90 compiler

AC_ARG_ENABLE([fortran], AS_HELP_STRING(--enable-fortran, [build Fortran 77/90 interfaces [[default=auto]]]))
if test "$enable_fortran" != "no"; then
  AC_LANG_PUSH(Fortran)
  AC_PROG_FC([xlf95 ifort pathf95 f95 gfortran g95 pgf95 lf95 fort ifc efc pathf90 xlf90 pgf90 epcf90 xlf f90])
  if test "$FC" != ""; then
    enable_fortran="yes"
    AC_DEFINE([HAVE_FORTRAN], [1], [Define to 1 if Fortran interface is to be compiled.])
    AC_SUBST(FC, "$FC")

    AC_FC_LIBRARY_LDFLAGS
    AC_FC_FREEFORM

    FC_PROG_NAME=`basename $FC`

    case $host in
      i?86-*-* | k?*-*-* | athlon-*-* | ia64-*-* | x86_64-*-*)
        case "$FC_PROG_NAME" in
          ifc|ifort|efc)
            REQ_FCFLAGS="$REQ_FCFLAGS -mp -Vaxlib"
          ;;
        esac
      ;;
      powerpc*-*-*)
        case "$FC_PROG_NAME" in
          xlf*) 
            REQ_FCFLAGS="$REQ_FCFLAGS -qstrict" 
          ;;
        esac
      ;;
    esac

    AX_FC_ETIME
    AC_SUBST(ETIME, $ax_fc_etime)
    AX_CXX_FC_LIB

    AC_FC_WRAPPERS
    AC_FC_MAIN
    AX_F90_MODULE_FLAG
    AC_SUBST(ax_f90_modflag)
    AX_F90_MODULE_STYLE
    module_case=`echo "$ax_f90_module_style" | sed 's/,.*$//'`
    module_ext=`echo "$ax_f90_module_style" | sed 's/^.*, //'`
    AC_SUBST(module_ext)
  else
    enable_fortran="no"
  fi
  AC_SUBST(REQ_FCFLAGS)
  FCFLAGS="$FCFLAGS $REQ_FCFLAGS"
  AC_LANG_POP(Fortran)
fi

AM_CONDITIONAL(UPCASE_MODULE, [test "$module_case" = "uppercase"])
AM_CONDITIONAL(HAVE_FORTRAN, [test "$enable_fortran" = "yes"])

AC_SUBST(F77, $FC)
AC_SUBST(FFLAGS, $FCFLAGS)

# Add libraries
AC_CHECK_LIB(m,sqrt)

# libtool stuff
LT_INIT

# Output
AC_CONFIG_FILES([Makefile src/Makefile include/Makefile
                 tests/Makefile fortran/Makefile qd-config
                 fortran/second.f qd.pc])
AC_OUTPUT
chmod +x qd-config

echo
echo "Using "
echo "  C++ Compiler      = $CXX"
echo "  C++ Flags         = $CXXFLAGS $DEFS"
if test "$enable_fortran" = "yes"; then
  echo "  F90 Compiler      = $FC"
  echo "  F90 Flags         = $FCFLAGS $FCFLAGS_f90"
  echo "  F90 Libs          = $FCLIBS"
fi
echo "  enable fortran    = $enable_fortran"
echo "  enable inline     = $enable_inline"
echo "  enable x86 fix    = $x86_fix"
echo "  enable ieee add   = $enable_ieee_add"
echo "  enable sloppy mul = $enable_sloppy_mul"
echo "  enable sloppy div = $enable_sloppy_div"
echo "  fma               = $ax_cxx_fma"
echo "  fms               = $ax_cxx_fms"
echo "  fma cxxflags      = $fma_added_cxxflags"
echo "  arch              = $with_arch ($arch_cxxflags)"
echo "  edd_real          = $edd_real_status"
echo "  _Float64x mantdig = $edd_float64x_mant_dig"
echo "  _Float64x max exp = $edd_float64x_max_exp"
echo "  edd splitter      = $edd_splitter"
