SRC = c_dd.cpp c_qd.cpp c_td.cpp dd_real.cpp dd_const.cpp td_real.cpp td_const.cpp \
      fpu.cpp qd_real.cpp qd_const.cpp util.cpp bits.cpp util.h

if HAVE_EDD_REAL
SRC += edd_real.cpp edd_const.cpp
endif

lib_LTLIBRARIES = libqd.la

libqd_la_SOURCES = $(SRC)

AM_CPPFLAGS = -I$(top_builddir) -I$(top_builddir)/include -I$(top_srcdir)/include
